--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "ioredis": "^5.0.5"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
